syntax = "proto3";
import "google/protobuf/timestamp.proto";
package proto;

option java_multiple_files = true;
option java_package = "org.example.slaughter_house.grpc";



service FirstStationService {
    rpc RegisterAnimal(RegisterAnimalRequest) returns (Animal);
    rpc WeightAnimal(WeightAnimalRequest) returns (Animal);
}

service SecondStationService {
    rpc CutAnimal(CutAnimalRequest) returns (CutAnimalResponse);
    rpc PutPartOnTray(PutProductOnTrayRequest) returns (PutProductOnTrayResponse);
}

service ThirdStationService {
    rpc PackProduct(PackProductRequest) returns (PackProductResponse);
}

service DatabaseService {
    rpc GetAnimal (GetAnimalRequest) returns (Animal);
    rpc CreateAnimal (CreateAnimalRequest) returns (Animal);
    rpc UpdateAnimal (UpdateAnimalRequest) returns (Animal);
    rpc DeleteAnimal (DeleteAnimalRequest) returns (Animal);
    rpc GetAnimalsByOrigin (GetAnimalsByOriginRequest) returns (Animals);
    rpc GetAnimalsByCreatedAt (GetAnimalsByCreatedAtRequest) returns (Animals);

    rpc CreatePart (CreatePartRequest) returns (Part);

}

message GetAnimalRequest {
    int64 animalId = 1;
}

message UpdateAnimalRequest {
    int64 animalId = 1;
    string animalType = 2; // optional, can be updated
    double animalWeight = 3; // optional, can be updated
}

message DeleteAnimalRequest {
    int64 animalId = 1;
}



message Animal {
  int64 animalID = 1;
  string animalType = 2;    //"cow", "chicken", "pig"..
  double animalWeight = 3;
  string origin = 4;
  google.protobuf.Timestamp createdAt = 5;
}


// Message representing a part of the animal
message Part {
    int64 partId = 1;        // Unique ID for the part
    string partType = 2;      // e.g., "leg", "loin"
    double partWeight = 3;     // Weight of the part
    int64 animalId = 4;      // ID of the animal this part came from
    google.protobuf.Timestamp createdAt = 5;
}

message Product {
    int64 productId = 1;           // Unique ID for the product
    string productType = 2;         // Type of product (half an animal, supermarket pack, etc.)
    repeated Part parts = 3;         // List of parts included in the product
    double productWeight = 4;          // Weight of the product

}


message Tray {
    int64 trayId = 1;
    string trayType = 2;        // e.g., "wings", "bellies"
    string animalType = 3;      // e.g., "chicken", "pig"
    repeated Part parts = 4;    // List of parts on the tray
}


message RegisterAnimalRequest {
    string animalType = 1;
    double animalWeight = 2;
    string origin = 3;
}

message CreateAnimalRequest {
    string animalType = 1;
    double animalWeight = 2;
    string origin = 3;

}

message CreatePartRequest {
    string partType = 2;      // e.g., "leg", "loin"
    double partWeight = 3;     // Weight of the part
    int64 animalId = 4;
}

message WeightAnimalRequest {
    int64 animalId = 1;
}

// Message for cutting an animal into parts
message CutAnimalRequest {
   Animal animal = 1;
}

message CutAnimalResponse {        // Cutting success status
    repeated Part parts = 2;   // List of parts generated
}

message PutProductOnTrayRequest {
    repeated Part parts = 1;       // List of parts to put on the tray
}

message Animals {
    repeated Animal animal = 1;
}

message GetAnimalsByOriginRequest {
    string origin = 1;
}
message GetAnimalsByCreatedAtRequest {
google.protobuf.Timestamp createdAt = 1;
}

message PutProductOnTrayResponse {
    bool success = 1;              // Putting parts on tray success status
    string message = 2;            // Response message
    repeated Part parts = 3;
}

// Message for packing products
message PackProductRequest {
    repeated  Tray trays = 1;       // List of parts to pack
}

message PackProductResponse {
    bool success = 1;              // Packing success status
    string message = 2;            // Response message
    repeated Product products = 3;           // Packed product
}






